--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
 			<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@300&display=swap" rel="stylesheet">
 	</head>
 	
-	<body>
+	<body class="crt">
 	
 	<div class="nav">
   <a href="portfolio.html#about"><b>About Me</b></a>
