--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,8 @@
 			<script type="text/javascript" src="java.js"></script> 
     </head>
     <body>
-	<div class="crt">
+	<div id="remove" class="crt">
+	<img id="button" style="width:2%; position: absolute; top: 8px; right: 16px;"src="sett.png">
         <!--Place completed gif here and figure out how to load it later-->
         <div class="logo space" style="padding:100px; background: rgb(74,133,255);
 background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100%);">
@@ -50,24 +51,26 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 		Able to use <b>Html</b>, <b>CSS</b>, and <b>JavaScript</b>. I have been drawing since <b>before I remember</b>. So far, I have been animating for about <b>5 years</b>, 
 		although it was very small in the beginning. Now I feel way more confident with my animations and anatomy (although I do love squash and stretch). 
 		<br> I've only begun coding in about <strong>2020</strong> with my <strong>Computer Science</strong> teacher. I didn't anticipate coding when entering his class, but starting with <strong>Visual Basic</strong> was amazing.
-		I loved making with this language and I wanted to go deeper and further into it.<br><br><br><br><br><br></p> </div>
+		I loved making with this language and I wanted to go deeper and further into it.<br><br><br><br><br><br><br><br><br><br><br><br></p> </div>
 		
 		<!--Art and Animation-->
         <div id="art">
         <h1 style="color:white; text-align: right;padding:10px"><strong>Art & Animation</strong></h1> </div>
 		
-			<img style="float:left; width:40%; padding:10px;" src="granola_spin.gif">
-			<p class="glow" style="text-align: right;padding:10px"><a href="gallery.html">Here is some of my work that I've done.</a> My animation is typically 16 fps animated on 2's, 
+			<img style="float:left; width:30%; padding:10px;" src="flametest.gif">
+			<p class="glow" style="text-align: right; padding:10px; float:bottom;"><a href="gallery.html">Here is some of my work that I've done.</a> My animation is typically 16 fps animated on 2's, 
 		but I can work at the industry standard of 24 fps on 1's. I've worked on some games with artwork such as <strong>RunnerOS</strong> in the <strong>GMTK Game Jam</strong> of 2020, 
 		and <strong>Lab22</strong>. <br> I have loved animation for as long as I've known, beginning with <strong>Newgrounds</strong> and <strong>Flash</strong> movies. 
-		I have many role models around the industry, like <strong>Stephan Wan</strong>, <strong>Greg McMahon</strong> (Gregzilla), and the biggest one... <strong>James Baxter</strong><br><br><br><br><br><br><br><br></p>
+		I have many role models around the industry, like <strong>Stephan Wan</strong>, <strong>Greg McMahon</strong> (Gregzilla), and the biggest one... 
+		<strong>James Baxter</strong><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 		
 		<!--Projects-->
         <div id="program">
         <h1 style="color:white; text-align: left;padding:10px"><strong>Projects</strong></h1> </div>
 		
-			<p class="glow" style="text-align: left;padding:10px">Programs that I have made during my time at <strong>Catapult</strong>,
-			alongside some honorable mentions.<br><br><br><br><br><br><br><br><br><br><br><br></p>
+			<p class="glow" style="text-align: left;padding:10px">Projects and programs that I have made, inside and outside of Nextech Catapult. 
+			Some are games that have been made (or are being made) outside of Catapult, while others are projects worked on for the purpose of learning.<br>
+			<img style="width:30%; padding:10px;"src="runner.png"><img style="width:30%; padding:10px;" src="lab.png"><br><br><br><br><br><br><br><br><br><br><br><br></p>
 			
 			<!--Contact-->
         <div id="contact">
