--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
 			<script type="text/javascript" src="java.js"></script> 
     </head>
     <body>
-	<div id="remove" class="crt">
-	<img id="button" style="width:2%; position: absolute; top: 8px; right: 16px;"src="sett.png">
+	<div class="crt">
+	<img style="z-index:20; position:relative; width:2%; float:right; top: 8px; right: 16px;" onclick="removeEffect()" src="sett.png">
         <!--Place completed gif here and figure out how to load it later-->
         <div class="logo space" style="padding:100px; background: rgb(74,133,255);
 background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100%);">
