--- a/gallery.html
+++ b/gallery.html
@@ -47,10 +47,18 @@ function removeEffect(){
 		<h1>Jest</h1>
 	 <div class="floating">
 	 <img src="sheet.png">
+	 <img src="scythe.gif">
+	 <img src="spin.gif">
 	 </div>
 	 <h1>Lord Raptor</h1>
 	 <div class="floating">
 	 <img src="lordraptor.png">
+	 </div>
+	 <h1>Misc.</h1>
+	 <div class="floating">
+	 <img src="cape.gif">
+	 <img src="run.gif">
+	 <img src="spitrender.gif">
 	 </div>
 	 
 	 <h2>For More!<h2>
