--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 		although it was very small in the beginning. Now I feel way more confident with my animations and anatomy (although I do love squash and stretch). 
 		<br> I've only begun coding in about <strong>2020</strong> with my <strong>Computer Science</strong> teacher. I didn't anticipate coding when entering his class, but starting with <strong>Visual Basic</strong> was amazing.
 		I loved making with this language and I wanted to go deeper and further into it.<br>
-		<div style="margin-top:20%;"></div>
+		<div style="margin-top:40%;"></div>
 		</p> </div>
 		
 		<!--Art and Animation-->
@@ -70,7 +70,7 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 		and <strong>Lab22</strong>. <br> I have loved animation for as long as I've known, beginning with <strong>Newgrounds</strong> and <strong>Flash</strong> movies. 
 		I have many role models around the industry, like <strong>Stephan Wan</strong>, <strong>Greg McMahon</strong> (Gregzilla), and the biggest one... 
 		<strong>James Baxter</strong><br>
-		<div style="margin-top:20%;"></div></p>
+		<div style="margin-top:40%;"></div></p>
 		
 		<!--Projects-->
         <div id="program">
@@ -81,10 +81,10 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 			<a target="_blank" href="https://abhorrentpropaganda.itch.io/runneros"><img style="width:30%; padding:10px; margin-top:20px;"src="runner.png"></a>
 			<a target="_blank" href="https://twitter.com/Lab22Official"><img style="width:30%; padding:10px;" src="lab.png"></a>
 			<a target="_blank" href="https://jackc05.github.io/clientSiteTemplate/client.html"><img style="width:30%; padding:10px;" src="hire.png"></a><br>
-			<a target="_blank" href="https://jackc05.github.io/rps/"><img style="width:30%; padding:10px;" src="test.png"></a>
-			<img style="width:30%; padding:10px;" src="test.png">
+			<a target="_blank" href="https://jackc05.github.io/rps/"><img style="width:30%; padding:10px;" src="rps.png"></a>
+			<a target="_blank" href="https://popcode.org/?snapshot=0957b0c8-f1c7-4045-bdf3-ea1fb4c6eff0"><img style="width:30%; padding:10px;" src="translate.png"></a>
 			<img style="width:30%; padding:10px;" src="test.png"><br>
-			<div style="margin-top:20%;"></div></p>
+			<div style="margin-top:40%;"></div></p>
 			
 		<!--Likes and Interests-->
 		<div id="like">
@@ -97,7 +97,7 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 			<b>King Gizzard</b> is a small band that doesn't have too much of a following and that is awful, it should be seen by <b>WAY</b> more people.<br><br>
 			My favorite shows would go <b>Castlevania on Netflix</b>, <b>Mob Psycho 100</b>, and <b>Infinity Train</b>. 
 			All having amazing story and some having some of the best animation I've seen in recent shows<br>
-			<div style="margin-top:20%;"></div></p>
+			<div style="margin-top:40%;"></div></p>
 			
 			<!--Contact-->
         <div id="contact">
