--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 			<a target="_blank" href="https://jackc05.github.io/clientSiteTemplate/client.html"><img style="width:30%; padding:10px;" src="hire.png"></a><br>
 			<a target="_blank" href="https://jackc05.github.io/rps/"><img style="width:30%; padding:10px;" src="rps.png"></a>
 			<a target="_blank" href="https://popcode.org/?snapshot=0957b0c8-f1c7-4045-bdf3-ea1fb4c6eff0"><img style="width:30%; padding:10px;" src="translate.png"></a>
-			<a target="_blank" href="https://victorghys.itch.io/little-dice"><img style="width:30%; padding:10px;" src="dice.gif"></a><br>
+			<a target="_blank" href="https://victorghys.itch.io/little-dice"><img style="width:30%; padding:10px;" src="dicestill.gif"></a><br>
 			<div style="margin-top:40%;"></div></p>
+
 			
 		<!--Likes and Interests-->
 		<div id="like">
