--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ background: radial-gradient(circle, rgba(74,133,255,1) 0%, rgba(117,12,66,1) 100
 		<div style="margin-top:40%;"></div>
 		</p> </div>
 		
+		<div class="twitterblock"><div class="html-embed-6 w-embed w-script"><div class="twitter" style="display: flex; width: 750px; max-width: 100%; margin-top: 0px; margin-bottom: 0px;"><iframe id="twitter-widget-0" allowtransparency="true" allowfullscreen="true" class="" style="position: static; visibility: visible; width: 750px; height: 650px; display: block; flex-grow: 1;" title="Twitter Timeline" src="https://syndication.twitter.com/srv/timeline-profile/screen-name/QuestJest?dnt=false&embedId=twitter-widget-4&frame=false&hideBorder=false&hideFooter=false&hideHeader=false&hideScrollBar=false&lang=en&maxHeight=750px&origin=https%3A%2F%2Fpublish.twitter.com%2F%3FbuttonType%3DFollowButton%26query%3Dhttps%253A%252F%252Ftwitter.com%252FCCGhostbusters%253Flang%253Den%26widget%3DTimeline&sessionId=d5f18d60aecf95b262fc298c756846654de5c161&showHeader=true&showReplies=false&theme=dark&transparent=false&widgetsVersion=1bfeb5c3714e8%3A1661975971032"></iframe></div> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div></div> 
+		
 		<!--Art and Animation-->
         <div id="art">
         <h1 style="color:white; text-align: right;padding:10px"><strong>Art & Animation</strong></h1> </div>
